--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 
+
     <groupId>kz.epam.intlab</groupId>
     <artifactId>TrulyNews</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -36,6 +37,11 @@
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts-taglib</artifactId>
+            <version>1.3.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts-extras</artifactId>
             <version>1.3.10</version>
         </dependency>
         <dependency>
@@ -133,5 +139,6 @@
                 </configuration>
             </plugin>
         </plugins>
+
     </build>
 </project>
