HibernateSessionFactory injected in NewsDao

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,4 +35,8 @@
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
 
+  <listener>
+    <listener-class>kz.epam.intlab.listener.ContextListener</listener-class>
+  </listener>
+
 </web-app>
